crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_loop_while_do_and_for_forms.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun loops(values: Iterable<String>) {
  while (hasNext()) advance()
  do {
    tick()
  } while (pending())
  for (value in values) {
    consume(value)
  }
  for ((index, value) in values.withIndex()) {
    consume(index, value)
  }
}

diagnostics:
(none)
