crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_modifier_class_header.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
public sealed class ModifiedHeader

private data class HiddenValue(val value: String)

internal open class OpenForTests

diagnostics:
(none)
