crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_modifier_function_property_combinations.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
abstract class ModifiedMembers {
  protected abstract val size: Int

  public final fun label(): String = "size=$size"
}

diagnostics:
(none)
