crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_nested_classes_objects_and_functions.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Outer {
  class Inner

  object NestedObject

  fun build(): Inner = Inner()
}

diagnostics:
(none)
