crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_nested_interface_and_enum.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Container {
  interface Entry {
    val key: String
  }

  enum class Kind {
    First,

    Second,
  }
}

diagnostics:
(none)
