crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_nested_type_alias.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Aliases {
  typealias Names = List<String>

  val names: Names = emptyList()
}

diagnostics:
(none)
