crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_newline_before_as.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun newlineBeforeAs(value: Any) {
  value as Int
}

fun newlineBeforeSafeAs(value: Any) {
  value as? Int
}

diagnostics:
(none)
