crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_object_data_object.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
data object EndOfStream

diagnostics:
(none)
