crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_object_declaration.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
object Settings {
  const val Name = "jolt"
}

diagnostics:
(none)
