crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_object_expression.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val listener =
  object : Runnable {
    override fun run() {
      println("tick")
    }
  }

diagnostics:
(none)
