crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_postfix_newline_breaks_before_selector.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun newlineSelectors(receiver: Receiver) {
  val selected = receiver.child.call()

  receiver
  standalone()

  consume(selected)
}

fun newlineEndsTightSuffixes(receiver: Receiver) {
  receiver
  ["key"]

  receiver.child
  { it.active }

  receiver
  ::child
}

diagnostics:
(none)
